2004-11-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-version): Release 0.8.2.

	* mi-elisp.el (toplevel): Load help-mode.el instead of help.el, in
	order to avoid overwriting key bindings.  Quote colon-keywords in
	button definitions.

	* mi-emacs.el (toplevel): Quote a colon-keyword in a button
	definition.

2004-11-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-version): Release 0.8.1.
	(mode-info-goto-info-entry-1): When a line number is equal to
	zero, search the concerend name instead of using line numbers.

	* mi-elisp.el (mode-info-insert-button): Simplified.
	(mode-info-elisp-add-function-button): Follow the change of
	`mode-info-insert-button'.
	(mode-info-elisp-add-variable-button): Ditto.

	* mi-emacs.el (mode-info-emacs-add-function-button): Follow the
	change of `mode-info-insert-button'.

	* mi-gauche.el (toplevel): Use `scheme' as its parent class,
	instead of `guile'.
	(process-index-node): Follow the upsteram changes.

2004-11-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-config.el (toplevel): Move button definitions to mi-elisp.el
	and mi-emacs.el.

	* mi-elisp.el (toplevel): Require help.el.  Import buttons.
	(mode-info-define-button-type): New function.
	(mode-info-button-type-get): Ditto.
	(mode-info-insert-button): Simplified.  Renamed from
	`mode-info-elisp-insert-button'.
	(mode-info-elisp-add-function-button): Follow the change of
	`mode-info-insert-button'.
	(mode-info-elisp-add-variable-button): Ditto.

	* mi-emacs.el (toplevel): Import a button.
	(mode-info-emacs-add-function-button): Follow the change of
	`mode-info-insert-button'.

2004-11-14  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* mi-util.el (mode-info-static-when): New macro.

	* mi-elisp.el (mode-info-elisp-insert-button): Use
	insert-text-button if it is bound.

	* mi-config.el (mode-info-advise-describe-commands): Enable for
	emacsen with `define-button-type', such as Emacs-21.3.50.